# sdb

./: Cargo.toml  README  README.md  dictzip.c  dictzip.h  dictzip.hh  justfile  meson.build  mmap.hh  sdb.1  sdb.c  sdb.cc  sdb.h  types.hh
src/: dictzip.rs  main.rs  render.rs  stardict.rs  utils.rs
test/: test64.idx  test64.ifo
utf/: rune.c  runeistype.c  runeistypedata  runetotype.c  runetotypedata  utf.h  utfnlen.c
